src/test/deca/context/valid/class_same_name_class_object.deca
// Description :
//
//      Test correct d'une classe nommée de la meme maniere que l'object
//
// Résultats :
//
//      N/A
//
// Historique :
//
//      Créé le 19/06/2023 par gl03

class A {

}

{
    A A = new A();
}
