src/test/deca/context/invalid/class_new_null.deca
//  Description : 
// 
//      Test incorrect qui utilise un new null
// 
//  Résultats :
// 
//      N/A 
// 
//  Historique : 
// 
//      Créé le 13/06 par gl03

class A {

}

{
    A oA = new null();
}